# dhbw_roomfinder

./: .gitignore  Cargo.toml  README.md  data.json
src/: config.rs  free.rs  icalparser.rs  loadingbar.rs  main.rs  room.rs
