[package]
name = "dhbw_planer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
futures = "0.3.31"
icalendar = "0.17.5"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = "0.12.24"
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
terminal_size = "0.4.3"
tokio = { version = "1.48.0", features = ["full"] }
